Adds API and integration for add account page

--- a/client/css/styles.css
+++ b/client/css/styles.css
@@ -5,3 +5,28 @@
     background-color: #fff;
     border: 1px solid rgba(0, 0, 0, 0.1);
 }
+
+.navbar {
+    margin-bottom: 0 !important;
+}
+
+.left-nav {
+    background-color: grey;
+    position: fixed;
+    height: 100%
+}
+
+.left-nav-li {
+    padding-top: 20px;
+    height: 50px;
+    font-size: 18px;
+    font-weight: bold;
+}
+
+.left-nav-anchor {
+    color: white;
+}
+
+.margin-top-20 {
+    margin-top: 20px;
+}
