--- a/client/views/partials/dashboard.html
+++ b/client/views/partials/dashboard.html
@@ -1,3 +1,17 @@
-<div>
-    this is dashboard
+<div ng-controller="DashboardCtrl">
+    <div class="col-md-2 left-nav">
+        <ul class="list-unstyled">
+            <li ng-click="navigate('addAccount')" class="left-nav-li">
+                <a class="left-nav-anchor">Add Account</a>
+            </li>
+            <li ng-click="navigate('addAccount')" class="left-nav-li">
+                <a class="left-nav-anchor">Dummy</a>
+            </li>
+        </ul>
+    </div>
+
+    <div class="col-md-10 pull-right">
+        <div ng-include="template"></div>
+    </div>
+
 </div>
