Adds minor changes for add account

--- a/client/css/styles.css
+++ b/client/css/styles.css
@@ -1,3 +1,7 @@
+h1,h2,h3,h4,h5,h6 {
+    margin: 0;
+}
+
 .login-form {
     max-width: 380px;
     padding: 15px 35px 45px;
@@ -29,4 +33,11 @@
 
 .margin-top-20 {
     margin-top: 20px;
+}
+
+.add-account-modal{
+    padding: 15px;
+    margin: 0 auto;
+    background-color: #fff;
+    border: 1px solid rgba(0, 0, 0, 0.1);
 }
