--- a/client/views/index.html
+++ b/client/views/index.html
@@ -56,7 +56,7 @@
 <!--controllers-->
 <script src="js/controllers/login.js"></script>
 <script src="js/controllers/dashboard.js"></script>
-<script src="js/controllers/addAccount.js"></script>
+<script src="js/controllers/accounts.js"></script>
 
 </body>
 </html>
