--- a/client/views/index.html
+++ b/client/views/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" type="text/css" href="components/bootstrap/dist/css/bootstrap.min.css">
-    <link href="/components/angular-bootstrap/ui-bootstrap-csp.css" type="text/css">
+    <link href="components/angular-bootstrap/ui-bootstrap-csp.css" type="text/css">
+    <link rel="stylesheet" type="text/css" href="components/angular-ui-grid/ui-grid.min.css">
     <link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
 
@@ -46,6 +47,7 @@
 <script src="components/angular-cookies/angular-cookies.min.js"></script>
 <script src="components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
 <script src="components/underscore/underscore-min.js"></script>
+<script src="components/angular-ui-grid/ui-grid.min.js"></script>
 
 <!--app-->
 <script src="js/app.js"></script>
