--- a/client/views/templates/accounts.html
+++ b/client/views/templates/accounts.html
@@ -1,7 +1,15 @@
 <div ng-controller="AccountsCtrl">
-    <h3>Accounts</h3>
-    <div class="pull-right">
-        <button class="btn btn-success" ng-click="openAddAccountModal()">Add Account</button>
+
+    <div>
+        <h3>Accounts</h3>
+        <div class="pull-right">
+            <button class="btn btn-success" ng-click="openAddAccountModal()">Add Account</button>
+        </div>
+    </div>
+
+
+    <div class="margin-top-40">
+        <div class="grid" ui-grid="accountGridOptions"></div>
     </div>
 
     <script type="text/ng-template" id="add-account.html">
