--- a/client/views/templates/accounts.html
+++ b/client/views/templates/accounts.html
@@ -12,6 +12,12 @@
         <div class="grid" ui-grid="accountGridOptions"></div>
     </div>
 
+    <div>
+        <ul uib-pagination total-items="totalItems" ng-model="currentPage" ng-change="pageChanged()"></ul>
+    </div>
+
+    {{currentPage}}
+
     <script type="text/ng-template" id="add-account.html">
         <div class="add-account-modal">
 
