Adds logout in nav controller

--- a/client/views/index.html
+++ b/client/views/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body ng-app="EasyGaadi">
-<nav class="navbar navbar-default">
+<nav class="navbar navbar-default" ng-controller="NavCtrl">
     <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
@@ -28,7 +28,7 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="#" ui-sref="about">About</a></li>
+                <li><a href="#" ng-click="logout()">Logout</a></li>
             </ul>
         </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
@@ -54,6 +54,7 @@
 <script src="js/services.js"></script>
 
 <!--controllers-->
+<script src="js/controllers/nav.js"></script>
 <script src="js/controllers/login.js"></script>
 <script src="js/controllers/dashboard.js"></script>
 <script src="js/controllers/accounts.js"></script>
