--- a/client/css/styles.css
+++ b/client/css/styles.css
@@ -53,6 +53,10 @@ h1, h2, h3, h4, h5, h6 {
 .cursor-pointer {
     cursor: pointer;
 }
-.main-right{
-    padding:30px;
+.main-right {
+    padding: 30px;
+}
+
+.margin-top-40 {
+    margin-top: 40px;
 }
