--- a/client/views/templates/accounts.html
+++ b/client/views/templates/accounts.html
@@ -5,6 +5,12 @@
         <button class="btn btn-success pull-right" ng-click="openAddAccountModal()">Add Account</button>
     </div>
 
+    <div class="margin-top-40">
+        <div class="grid" ui-grid="accountGridOptions"></div>
+    </div>
+
+    <ul uib-pagination total-items="totalItems" ng-model="pageNumber" max-size="maxSize" class="pagination-sm" boundary-link-numbers="true" rotate="false" ng-change="getAccountsData()"></ul>
+
     <script type="text/ng-template" id="add-account.html">
         <div class="add-account-modal">
 
