--- a/client/views/partials/dashboard.html
+++ b/client/views/partials/dashboard.html
@@ -1,11 +1,29 @@
 <div ng-controller="DashboardCtrl">
     <div class="col-md-2 left-nav">
         <ul class="list-unstyled">
-            <li ng-click="navigate('addAccount')" class="left-nav-li">
-                <a class="left-nav-anchor">Add Account</a>
+            <li class="left-nav-li">
+                <a class="left-nav-anchor" ng-click="navigate('addAccount')">Accounts</a>
             </li>
-            <li ng-click="navigate('addAccount')" class="left-nav-li">
-                <a class="left-nav-anchor">Dummy</a>
+            <li class="left-nav-li">
+                <a class="left-nav-anchor" ng-click="navigate('userPage')">Users</a>
+            </li>
+            <li class="left-nav-li">
+                <a class="left-nav-anchor" ng-click="navigate('driverPage')">Drivers</a>
+            </li>
+            <li class="left-nav-li">
+                <a class="left-nav-anchor" ng-click="navigate('trucksPage')">Trucks</a>
+            </li>
+            <li class="left-nav-li">
+                <a class="left-nav-anchor" ng-click="navigate('tripsPage')">Trips</a>
+            </li>
+            <li class="left-nav-li">
+                <a class="left-nav-anchor" ng-click="navigate('partyPage')">Party</a>
+            </li>
+            <li class="left-nav-li">
+                <a class="left-nav-anchor" ng-click="navigate('maintenanceCost')">Maintenance Cost</a>
+            </li>
+            <li class="left-nav-li">
+                <a class="left-nav-anchor" ng-click="navigate('tripLane')">Trip Lane</a>
             </li>
         </ul>
     </div>
