--- a/client/views/templates/accounts.html
+++ b/client/views/templates/accounts.html
@@ -1,7 +1,8 @@
 <div ng-controller="AccountsCtrl">
-    <h3>Accounts</h3>
-    <div class="pull-right">
-        <button class="btn btn-success" ng-click="openAddAccountModal()">Add Account</button>
+
+    <div class="main-right">
+        <h3>Accounts</h3>
+        <button class="btn btn-success pull-right" ng-click="openAddAccountModal()">Add Account</button>
     </div>
 
     <script type="text/ng-template" id="add-account.html">
