--- a/client/views/templates/accounts.html
+++ b/client/views/templates/accounts.html
@@ -6,7 +6,7 @@
     </div>
 
     <div class="margin-top-40">
-        <div class="grid" ui-grid="accountGridOptions"></div>
+        <div class="grid" ui-grid="accountGridOptions" ui-grid-selection></div>
     </div>
 
     <ul uib-pagination total-items="totalItems" ng-model="pageNumber" max-size="maxSize" class="pagination-sm" boundary-link-numbers="true" rotate="false" ng-change="getAccountsData()"></ul>
