Changes to modules instead of controllers

--- a/client/views/index.html
+++ b/client/views/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" type="text/css" href="components/bootstrap/dist/css/bootstrap.min.css">
-    <link href="/components/angular-bootstrap/ui-bootstrap-csp.css" type="text/css">
+    <link href="components/angular-bootstrap/ui-bootstrap-csp.css" type="text/css">
     <link rel="stylesheet" type="text/css" href="components/angular-ui-grid/ui-grid.min.css">
     <link rel="stylesheet" type="text/css"
           href="components/angular-ui-notification/dist/angular-ui-notification.min.css">
@@ -59,10 +59,10 @@
 <script src="js/services.js"></script>
 
 <!--controllers-->
-<script src="js/controllers/nav.js"></script>
-<script src="js/controllers/login.js"></script>
-<script src="js/controllers/dashboard.js"></script>
-<script src="js/controllers/accounts.js"></script>
+<script src="js/modules/nav.js"></script>
+<script src="js/modules/login.js"></script>
+<script src="js/modules/dashboard.js"></script>
+<script src="js/modules/accounts.js"></script>
 
 </body>
 </html>
