--- a/client/views/templates/accounts.html
+++ b/client/views/templates/accounts.html
@@ -1,4 +1,4 @@
-<div ng-controller="AccountsCtrl">
+<div ng-controller="ShowAccountsCtrl">
 
     <div class="main-right">
         <h3>Accounts</h3>
