--- a/client/views/partials/dashboard.html
+++ b/client/views/partials/dashboard.html
@@ -2,7 +2,7 @@
     <div class="col-md-2 left-nav">
         <ul class="list-unstyled">
             <li class="left-nav-li">
-                <a class="left-nav-anchor" ng-click="navigate('addAccount')">Accounts</a>
+                <a class="left-nav-anchor" ng-click="navigate('accounts')">Accounts</a>
             </li>
             <li class="left-nav-li">
                 <a class="left-nav-anchor" ng-click="navigate('userPage')">Users</a>
