--- a/client/views/index.html
+++ b/client/views/index.html
@@ -57,7 +57,7 @@
 
 <!--services-->
 <script src="js/services.js"></script>
-
+<script type="text/javascript" src="js/left-nav.js"></script>
 <!--controllers-->
 <script src="js/modules/nav.js"></script>
 <script src="js/modules/login.js"></script>
