--- a/client/views/partials/accounts/display.html
+++ b/client/views/partials/accounts/display.html
@@ -3,10 +3,11 @@
         <div class="col-xs-2 pall-zero">
             <left-navigation></left-navigation>
         </div>
+
         <div class="main-right col-xs-9" ng-controller="ShowAccountsCtrl">
 
             <h3>Accounts</h3>
-            <button class="btn btn-success pull-right" ng-click="openAddAccountModal()">Add Account</button>
+            <button class="btn btn-success pull-right" ng-click="goToEditAccountPage()">Add Account</button>
 
             <div class="margin-top-40">
                 <div class="grid" ui-grid="accountGridOptions" ui-grid-selection></div>
