--- a/client/views/partials/accounts/edit.html
+++ b/client/views/partials/accounts/edit.html
@@ -1,22 +1,19 @@
-this is edit account page
-<div class="add-account-modal">
-
-    <span ng-click="closeModal()" class="glyphicon glyphicon-remove pull-right cursor-pointer"></span>
-    <form ng-submit="addAccount()">
-        <h2 class="login-heading">Add Account</h2>
+<div class="col-md-4" ng-controller="AddEditAccountCtrl">
+    <h2 class="login-heading">Add Account</h2>
+    <form ng-submit="addOrUpdateAccount()" class="margin-top-20">
         <div class="form-group">
             <label for="accountId">Account Name</label>
-            <input ng-model="account.name" type="text" class="form-control" id="accountId"
+            <input ng-model="account.name" ng-readonly="account._id" type="text" class="form-control" id="accountId"
                    placeholder="Account Name">
         </div>
 
-        <div class="form-group">
+        <div class="form-group" ng-hide="account._id">
             <label for="userName">User Name</label>
             <input ng-model="account.userName" type="text" class="form-control" id="userName"
                    placeholder="User name">
         </div>
 
-        <div class="form-group">
+        <div class="form-group" ng-hide="account._id">
             <label for="password">Password</label>
             <input ng-model="account.password" type="password" class="form-control" id="password"
                    placeholder="Password">
