UI changes to accounts page

--- a/client/css/styles.css
+++ b/client/css/styles.css
@@ -56,3 +56,8 @@ h1, h2, h3, h4, h5, h6 {
 .margin-top-40 {
     margin-top: 40px;
 }
+.account-edit{
+    display: block;
+    margin: 0 auto;
+    float: none;
+}
