--- a/client/views/partials/party.html
+++ b/client/views/partials/party.html
@@ -6,7 +6,7 @@
         <div class="main-right col-xs-9">
 
             <h3>Party</h3>
-            <p>This is users page</p>
+            <p>This is party page</p>
 
 
         </div>
