--- a/client/views/partials/users.html
+++ b/client/views/partials/users.html
@@ -5,7 +5,7 @@
         </div>
         <div class="main-right col-xs-9">
 
-            <h3>Accounts</h3>
+            <h3>Users</h3>
            <p>This is users page</p>
 
 
