--- a/client/views/index.html
+++ b/client/views/index.html
@@ -26,7 +26,6 @@
             </button>
             <a class="navbar-brand" href="#">Easy Gaadi</a>
         </div>
-
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
@@ -56,7 +55,8 @@
 
 <!--services-->
 <script src="js/services.js"></script>
-<script type="text/javascript" src="js/left-nav.js"></script>
+<script type="text/javascript" src="js/directives/left-nav.js"></script>
+
 <!--controllers-->
 <script src="js/modules/nav.js"></script>
 <script src="js/modules/login.js"></script>
