--- a/client/views/index.html
+++ b/client/views/index.html
@@ -60,7 +60,7 @@
 <!--controllers-->
 <script src="js/modules/nav.js"></script>
 <script src="js/modules/login.js"></script>
-<script src="js/modules/accounts.js"></script>
+<script src="js/modules/accountsModule.js"></script>
 
 </body>
 </html>
