--- a/client/views/partials/trucks-list.html
+++ b/client/views/partials/trucks-list.html
@@ -3,10 +3,26 @@
         <div class="col-xs-2 pall-zero">
             <left-navigation></left-navigation>
         </div>
+        <div class="main-right col-xs-9">
+
+            <h3>Trucks</h3>
+            <p>This is trucks page</p>
+
+
+        </div>
+    </div>
+</div>
+
+
+<div class="container-fluid">
+    <div class="row pall-zero">
+        <div class="col-xs-2 pall-zero">
+            <left-navigation></left-navigation>
+        </div>
         <div class="main-right col-xs-9" ng-controller="ShowAccountsCtrl">
 
-            <h3>Accounts</h3>
-            <button class="btn btn-success pull-right" ng-click="goToEditAccountPage()">Add Account</button>
+            <h3>Trucks</h3>
+            <button class="btn btn-success pull-right" ng-click="goToEditAccountPage()">Add Trucks</button>
 
             <div class="margin-top-40">
                 <div class="grid" ui-grid="accountGridOptions" ui-grid-selection></div>
