--- a/client/views/partials/accounts/accountsList.html
+++ b/client/views/partials/accounts/accountsList.html
@@ -9,8 +9,9 @@
             <button class="btn btn-success pull-right" ng-click="goToEditAccountPage()">Add Account</button>
 
             <div class="margin-top-40">
-                <div class="grid" ui-grid="accountGridOptions" ui-grid-selection></div>
+                <div class="grid" ui-grid="accountGridOptions" ></div>
             </div>
+
 
             <ul uib-pagination total-items="totalItems" ng-model="pageNumber" max-size="maxSize" class="pagination-sm"
                 boundary-link-numbers="true" rotate="false" ng-change="getAccountsData()"></ul>
