Trucks Module Added

--- a/client/views/index.html
+++ b/client/views/index.html
@@ -61,6 +61,7 @@
 <script src="js/modules/nav.js"></script>
 <script src="js/modules/login.js"></script>
 <script src="js/modules/accountsModule.js"></script>
+<script src="js/modules/trucksModule.js"></script>
 
 </body>
 </html>
