--- a/client/views/index.html
+++ b/client/views/index.html
@@ -55,12 +55,14 @@
 
 <!--services-->
 <script src="js/services.js"></script>
-<script type="text/javascript" src="js/directives/left-nav.js"></script>
+<script src="js/directives/left-nav.js"></script>
+<script src="js/directives/date-picker.js"></script>
 
 <!--controllers-->
 <script src="js/modules/nav.js"></script>
 <script src="js/modules/login.js"></script>
 <script src="js/modules/accountsModule.js"></script>
+<script src="js/modules/driversModule.js"></script>
 
 </body>
 </html>
