--- a/client/views/partials/roles/roles.html
+++ b/client/views/partials/roles/roles.html
@@ -8,7 +8,7 @@
             <button class="btn btn-success pull-right" ng-click="goToEditRolePage()">Add Role</button>
 
             <div class="margin-top-40">
-            <div class="grid" ui-grid="userGridOptions" ui-grid-selection></div>
+            <div class="grid" ui-grid="roleGridOptions" ui-grid-selection></div>
             </div>
 
             <ul uib-pagination total-items="totalItems" ng-model="pageNumber" max-size="maxSize" class="pagination-sm"
