Fixing merge conflicts for the 10th time today

--- a/client/views/index.html
+++ b/client/views/index.html
@@ -66,6 +66,6 @@
 <script src="js/modules/trucksModule.js"></script>
 <script src="js/modules/user.js"></script>
 <script src="js/modules/roles.js"></script>
-
+<script src="js/modules/partyModule.js"></script>
 </body>
 </html>
