--- a/client/views/index.html
+++ b/client/views/index.html
@@ -61,6 +61,8 @@
 <script src="js/modules/nav.js"></script>
 <script src="js/modules/login.js"></script>
 <script src="js/modules/accountsModule.js"></script>
+<script src="js/modules/tripsModule.js"></script>
+<script src="js/directives/datePicker.js"></script>
 
 </body>
 </html>
