--- a/client/views/partials/trucks-list.html
+++ b/client/views/partials/trucks-list.html
@@ -4,7 +4,7 @@
         <div class="col-xs-2 pall-zero">
             <left-navigation></left-navigation>
         </div>
-        <div class="main-right col-xs-9" ng-controller="trucksCntrl">
+        <div class="main-right col-xs-9">
 
             <h3>Trucks List</h3>
             <button class="btn btn-success pull-right" ng-click="goToEditTrucksPage()">Add Truck</button>
