--- a/client/views/index.html
+++ b/client/views/index.html
@@ -36,12 +36,13 @@
                 <li><a href="#">How it Works</a></li>
                 <li><a href="#">Contact us</a></li>
                 <li><a href="#">GPS</a></li>
+                <li><a href="#" ng-click="logout()">Logout</a></li>
                <!-- <li>
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user-circle"></i><span
                             class="caret"></span></a>
                     <ul class="dropdown-menu">
                         <li><a href="#">My Account</a></li>
-                        <li><a href="#" ng-click="logout()">Logout</a></li>
+
                     </ul>
                 </li>-->
             </ul>
@@ -71,6 +72,8 @@
 <script src="js/services.js"></script>
 <script src="js/directives/left-nav.js"></script>
 <script src="js/directives/date-picker.js"></script>
+<script src="js/directives/body-menu.js"></script>
+
 
 <!--controllers-->
 <script src="js/modules/nav.js"></script>
