--- a/client/views/partials/accounts/accountsList.html
+++ b/client/views/partials/accounts/accountsList.html
@@ -1,3 +1,4 @@
+<top-navigation></top-navigation>
 <div class="container-fluid">
     <div class="row pall-zero">
         <div class="col-xs-2 pall-zero">
@@ -13,7 +14,7 @@
             </div>
 
 
-            <ul uib-pagination total-items="totalItems" ng-model="pageNumber" max-size="maxSize" class="pagination-sm"
+            <ul uib-pagination total-items="totalItems" ng-model="pageNumber" max-size="maxSize" class="pagination-sm pull-right"
                 boundary-link-numbers="true" rotate="false" ng-change="getAccountsData()"></ul>
         </div>
     </div>
