--- a/client/views/partials/users/show-users.html
+++ b/client/views/partials/users/show-users.html
@@ -1,3 +1,4 @@
+<top-navigation></top-navigation>
 <div class="container-fluid">
     <div class="row pall-zero">
         <div class="col-xs-2 pall-zero">
@@ -8,10 +9,10 @@
             <button class="btn btn-success pull-right" ng-click="goToEditUserPage()">Add User</button>
 
             <div class="margin-top-40">
-                <div class="grid" ui-grid="userGridOptions" ui-grid-selection></div>
+                <div class="grid" ui-grid="userGridOptions"></div>
             </div>
 
-            <ul uib-pagination total-items="totalItems" ng-model="pageNumber" max-size="maxSize" class="pagination-sm"
+            <ul uib-pagination total-items="totalItems" ng-model="pageNumber" max-size="maxSize" class="pagination-sm pull-right"
                 boundary-link-numbers="true" rotate="false" ng-change="getAllUsers()"></ul>
         </div>
     </div>
