--- a/client/views/partials/edit-party.html
+++ b/client/views/partials/edit-party.html
@@ -7,7 +7,7 @@
         <div class="main-right col-xs-9">
             <div class="col-xs-6 account-edit">
                 <h2 class="login-heading">{{pageTitle}}</h2>
-                <form ng-submit="addOrUpdateAccount()" class="margin-top-20">
+                <form class="margin-top-20">
                     <div class="form-group">
                         <label for="accountId">Name</label>
                         <input ng-model="party.name" type="text" class="form-control" id="accountId"
