--- a/client/views/partials/trips-edit.html
+++ b/client/views/partials/trips-edit.html
@@ -7,50 +7,71 @@
         <div class="main-right col-xs-9">
             <div class="col-xs-6 account-edit">
                 <h2 class="login-heading">Add Trip</h2>
-                <form ng-submit="addOrUpdateTrip()" class="margin-top-20">
+                <form class="margin-top-20">
                     <div class="form-group">
                         <label for="date">Date</label>
-                        <!--<my-datepicker ng-model="trip.date"></my-datepicker>-->
-                    </div>
-
-                    <div class="form-group" ng-hide="account._id">
-                        <label for="userName">User Name</label>
-                        <input ng-model="account.userName" type="text" class="form-control" id="userName"
-                               placeholder="User name">
-                    </div>
-
-                    <div class="form-group" ng-hide="account._id">
-                        <label for="password">Password</label>
-                        <input ng-model="account.password" type="password" class="form-control" id="password"
-                               placeholder="Password">
+                        <date-picker ng-model="trip.date" id="date"></date-picker>
                     </div>
 
                     <div class="form-group">
-                        <label for="address">Address</label>
-                        <input ng-model="account.address" type="text" class="form-control" id="address"
-                               placeholder="Address">
+                        <label for="registrationNo">Registration No</label>
+                        <input ng-model="trip.registrationNo" type="text" class="form-control" id="registrationNo"
+                               placeholder="Registration Number">
+                    </div>
+                    <div class="form-group">
+                        <label for="driver">Driver</label>
+                        <select ng-model="trip.driver" ng-options="driver._id as driver.fullName for driver in drivers" type="text" class="form-control" id="driver">
+                        </select>
+                    </div>
+                    <div class="form-group">
+                        <label for="bookedFor">Booked For</label>
+                        <select ng-model="trip.bookedFor" ng-options="party._id as party.name for party in parties" type="text" class="form-control" id="bookedFor">
+                        </select>
                     </div>
 
                     <div class="form-group">
-                        <label for="contact">Contact Number</label>
-                        <input ng-model="account.contact" type="password" class="form-control" id="contact"
-                               placeholder="Contact Number">
+                        <label for="freightAmount">Freight Amount</label>
+                        <input ng-model="trip.freightAmount" type="number" class="form-control" id="freightAmount"
+                               placeholder="Freight Amount">
+                    </div>
+
+                    <div class="form-group">
+                        <label for="balance">Balance</label>
+                        <input ng-model="trip.balance" type="number" class="form-control" id="balance"
+                               placeholder="Balance">
+                    </div>
+
+                    <div class="form-group">
+                        <label for="tripLane">Trip Lane</label>
+                        <select ng-model="trip.tripLane" ng-options="tripLane._id as tripLane.name for tripLane in tripLanes" type="text" class="form-control" id="tripLane">
+                        </select>
+                    </div>
+
+                    <div class="form-group">
+                        <label for="advance">Advance</label>
+                        <input ng-model="trip.advance" type="number" class="form-control" id="advance"
+                               placeholder="Advance">
+                    </div>
+
+                    <div class="form-group">
+                        <label for="tripExpenses">Trip Expenses</label>
+                        <input ng-model="trip.tripExpenses" type="number" class="form-control" id="tripExpenses"
+                               placeholder="Trip Expenses">
                     </div>
                     <div>
-                        <div class="alert alert-danger" role="alert" ng-show="account.error">
-                            <strong>{{account.error}}</strong>
-                        </div>
                         <div>
-                            <div class="alert alert-danger" role="alert" ng-show="account.error">
-                                <strong>{{account.error}}</strong>
+                            <div class="alert alert-danger" role="alert" ng-show="trip.error">
+                                <strong>{{trip.error}}</strong>
                             </div>
 
-                            <div class="alert alert-success" role="alert" ng-show="account.success">
-                                <strong>{{account.success}}</strong>
+                            <div class="alert alert-success" role="alert" ng-show="trip.success">
+                                <strong>{{trip.success}}</strong>
                             </div>
                         </div>
+                    </div>
 
-                        <button type="submit" class="btn btn-primary">Submit</button>
+                        <button type="submit" class="btn btn-primary" ng-click="addOrUpdateTrip()">Submit</button>
+                        <input type="button" value="Cancel" class="btn btn-primary" ng-click="cancel()" />
                 </form>
             </div>
         </div>
