--- a/client/views/partials/trips.html
+++ b/client/views/partials/trips.html
@@ -14,7 +14,7 @@
             </div>
 
             <ul uib-pagination total-items="totalItems" ng-model="pageNumber" max-size="maxSize" class="pagination-sm"
-                boundary-link-numbers="true" rotate="false" ng-change="getAccountsData()"></ul>
+                boundary-link-numbers="true" rotate="false" ng-change="getTripsData()"></ul>
 
 
         </div>
