--- a/client/views/index.html
+++ b/client/views/index.html
@@ -70,9 +70,9 @@
 
 <!--services-->
 <script src="js/services.js"></script>
-<script src="js/directives/left-nav.js"></script>
-<script src="js/directives/date-picker.js"></script>
-<script src="js/directives/body-menu.js"></script>
+<script src="js/directives/leftNav.js"></script>
+<script src="js/directives/datePicker.js"></script>
+<script src="js/directives/bodyMenu.js"></script>
 
 
 <!--controllers-->
@@ -82,8 +82,8 @@
 <script src="js/modules/tripsModule.js"></script>
 <script src="js/modules/driversModule.js"></script>
 <script src="js/modules/trucksModule.js"></script>
-<script src="js/modules/user.js"></script>
-<script src="js/modules/roles.js"></script>
+<script src="js/modules/userModule.js"></script>
+<script src="js/modules/rolesModule.js"></script>
 <script src="js/modules/partyModule.js"></script>
 <script src="js/modules/maintenanceCost.js"></script>
 <script src="js/modules/tripLanesModule.js"></script>
