trucks-edit UI Changed

--- a/client/css/styles.css
+++ b/client/css/styles.css
@@ -108,7 +108,9 @@ h1, h2, h3, h4, h5, h6 {
     padding: 10px;
 
 }
-
+.mt-10{
+    margin-top: 30px;
+}
 .margin-top-40 {
     margin-top: 40px;
 }
