--- a/client/views/partials/drivers/edit-driver.html
+++ b/client/views/partials/drivers/edit-driver.html
@@ -1,4 +1,4 @@
-
+<top-navigation></top-navigation>
 <div class="container-fluid" ng-controller="AddEditDriverCtrl">
     <div class="row pall-zero">
         <div class="col-xs-2 pall-zero">
