--- a/client/views/partials/trucks-edit.html
+++ b/client/views/partials/trucks-edit.html
@@ -1,58 +1,81 @@
 <top-navigation></top-navigation>
 <div class="container-fluid" ng-controller="AddEditTruckCtrl">
     <div class="row pall-zero">
-        <div class="col-xs-2 pall-zero">
+        <div class="col-sm-2 col-xs-12 pall-zero">
             <left-navigation></left-navigation>
         </div>
-        <div class="main-right col-xs-9">
-            <div class="col-xs-6 account-edit">
-                <h2 class="login-heading">{{pageTitle}}</h2>
-                    <div class="form-group">
-                        <label>registrationNo</label>
-                        <input type="text" class="form-control" ng-modal="truck.registrationNo" placeholder="Registration No"/>
+        <div class="main-right col-sm-9 col-xs-12">
+            <div class="col-xs-12 account-edit">
+                <h2 class="login-heading text-center">{{pageTitle}}</h2>
+                <div class="col-sm-6 col-xs-12 mt-10">
+                    <div class="form-group col-xs-12">
+                        <label class="col-sm-4 col-xs-12 pall-zero">Registration No :</label>
+                        <div class="col-sm-8 col-xs-12">
+                            <input type="text" class="form-control" ng-modal="truck.registrationNo"
+                                   placeholder="Registration No"/>
+                        </div>
                     </div>
-                    <div class="form-group">
-                        <label>Truck Type</label>
-                        <input type="text" class="form-control" ng-modal="truck.truckType"
-                               placeholder="Truck Type"/>
+                    <div class="form-group col-xs-12">
+                        <label class="col-sm-4 pall-zero">Truck Type :</label>
+                        <div class="col-sm-8 col-xs-12">
+                            <input type="text" class="form-control" ng-modal="truck.truckType"
+                                   placeholder="Truck Type"/>
+                        </div>
                     </div>
-                    <div class="form-group">
-                        <label>Modal and Year</label>
-                        <input type="text" class="form-control" ng-modal="truck.modelAndYear"
-                               placeholder="Modal and Year"/>
+                    <div class="form-group col-xs-12">
+                        <label class="col-sm-4 pall-zero">Modal and Year :</label>
+                        <div class="col-sm-8 col-xs-12">
+                            <input type="text" class="form-control" ng-modal="truck.modelAndYear"
+                                   placeholder="Modal and Year"/>
+                        </div>
                     </div>
-                    <div class="form-group">
-                        <label>Fitness Expiry</label>
-                        <date-picker id="fitnessExpiry" ng-model="truck.fitnessExpiry"></date-picker>
-                    </div>
-                    <div class="form-group">
-                        <label>Permit Expiry</label>
-                        <date-picker id="permitExpiry" ng-model="truck.permitExpiry"></date-picker>
-                    </div>
-                    <div class="form-group">
-                        <label>Insurance Expiry</label>
-                        <date-picker id="insuranceExpiry" ng-model="truck.insuranceExpiry"></date-picker>
+                    <div class="form-group col-xs-12">
+                        <label class="col-sm-4 pall-zero">Fitness Expiry :</label>
+                        <div class="col-sm-8 col-xs-12">
+                            <date-picker id="fitnessExpiry" ng-model="truck.fitnessExpiry"></date-picker>
+                        </div>
                     </div>
 
-                    <div class="form-group">
-                        <label>Pollution Expiry</label>
-                        <date-picker id="pollutionExpiry" ng-model="truck.pollutionExpiry"></date-picker>
+                    <div class="form-group col-xs-12">
+                        <label class="col-sm-4 pall-zero">Permit Expiry :</label>
+                        <div class="col-sm-8 col-xs-12">
+                            <date-picker id="permitExpiry" ng-model="truck.permitExpiry"></date-picker>
+                        </div>
                     </div>
+                    <div class="form-group col-xs-12">
+                        <label class="col-sm-4 pall-zero">Insurance Expiry :</label>
+                        <div class="col-sm-8 col-xs-12">
+                            <date-picker id="insuranceExpiry" ng-model="truck.insuranceExpiry"
+                                         class="custom-form-control"></date-picker>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-xs-12 mt-10">
+                    <div class="form-group col-xs-12">
+                        <label class="col-sm-4 pall-zero">Pollution Expiry :</label>
+                        <div class="col-sm-8 col-xs-12">
+                            <date-picker id="pollutionExpiry" ng-model="truck.pollutionExpiry"></date-picker>
+                        </div>
+                    </div>
+                    <div class="form-group col-xs-12">
+                        <label class="col-sm-4 pall-zero">Tax Due Date : </label>
+                        <div class="col-sm-8 col-xs-12">
+                            <date-picker id="taxDueDate" ng-model="truck.taxDueDate"></date-picker>
+                        </div>
+                    </div>
+                </div>
+                <div class="clearfix"></div>
 
-                    <div class="form-group">
-                        <label>Tax Due Date</label>
-                        <date-picker id="taxDueDate" ng-model="truck.taxDueDate"></date-picker>
+                <div class="col-sm-4 col-xs-push-4 margin-top-20">
+                    <div class="alert alert-danger" role="alert" ng-show="truck.error">
+                        <strong>{{truck.error}}</strong>
                     </div>
-                    <div>
-                        <div class="alert alert-danger" role="alert" ng-show="truck.error">
-                            <strong>{{truck.error}}</strong>
-                        </div>
-                        <div class="alert alert-success" role="alert" ng-show="truck.success">
-                            <strong>{{truck.success}}</strong>
-                        </div>
-                         <input type="button" value="Submit" class="btn btn-primary" ng-click="addOrUpdateTruck()"/>
-                        <input type="button" value="Cancel" class="btn btn-primary" ng-click="cancel()"/>
+                    <div class="alert alert-success" role="alert" ng-show="truck.success">
+                        <strong>{{truck.success}}</strong>
                     </div>
+                    <input type="button" value="Submit" class="btn btn-primary" ng-click="addOrUpdateTruck()"/>
+                    <input type="button" value="Cancel" class="btn btn-primary" ng-click="cancel()"/>
+                </div>
 
             </div>
         </div>
