--- a/client/views/partials/trucks-edit.html
+++ b/client/views/partials/trucks-edit.html
@@ -9,16 +9,16 @@
                 <h2 class="login-heading">{{pageTitle}}</h2>
                     <div class="form-group">
                         <label>registrationNo</label>
-                        <input type="text" class="form-control" ng-modal="truck.registrationNo" placeholder="Registration No"/>
+                        <input type="text" class="form-control" ng-model="truck.registrationNo" placeholder="Registration No"/>
                     </div>
                     <div class="form-group">
                         <label>Truck Type</label>
-                        <input type="text" class="form-control" ng-modal="truck.truckType"
+                        <input type="text" class="form-control" ng-model="truck.truckType"
                                placeholder="Truck Type"/>
                     </div>
                     <div class="form-group">
                         <label>Modal and Year</label>
-                        <input type="text" class="form-control" ng-modal="truck.modelAndYear"
+                        <input type="text" class="form-control" ng-model="truck.modelAndYear"
                                placeholder="Modal and Year"/>
                     </div>
                     <div class="form-group">
